# anoma-wasm-template

./: README.md  tx_example.config.toml  vp_example.config.toml
.github/workflows/: build.yml
template/: .gitignore  Cargo.toml  Makefile  README.md  cargo-generate.toml  rust-toolchain.toml
template/src/: lib.rs
